update feature upload video to web3 cloudhost

--- a/public/index.html
+++ b/public/index.html
@@ -62,11 +62,27 @@
     </div>
     <div class="list-container">
        <div class="vid-list">
-           <a href="/watch-video?id=1"> <img src="./assets/thumbnails/thumbnail3.png" class="thumbnail" ></a>
+           <a href="/watch-video"> <img src="./assets/thumbnails/thumbnail3.png" class="thumbnail" ></a>
            <div class="flex-div">
                <img src="./assets/images/nilava.jpeg">
                <div class="vid-info">
-                   <a href="/watch-video?id=1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nobis?</a>
+                   <a href="/watch-video">Filebase</a>
+                   <p>Avalin</p>
+                   <p>2k Views &bull; 2 days</p>
+               </div>
+           </div>
+       </div>
+    </div>
+    <div class="banner">
+        <img src="./assets/images/banner.png" alt="" srcset="">
+    </div>
+    <div class="list-container">
+       <div class="vid-list">
+           <a href="/watch-video-v2"> <img src="./assets/thumbnails/thumbnail3.png" class="thumbnail" ></a>
+           <div class="flex-div">
+               <img src="./assets/images/nilava.jpeg">
+               <div class="vid-info">
+                   <a href="/watch-video-v2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nobis?</a>
                    <p>Avalin</p>
                    <p>2k Views &bull; 2 days</p>
                </div>
