--- a/public/watch_video.html
+++ b/public/watch_video.html
@@ -34,13 +34,11 @@
     <div class="container play-container">
         <div class="row">
             <div class="play-video">
-                <video controls autoplay width="640" height="360">
-                    <source
-                        src="https://share.ue.internxt.com/d/sh/file/49240ff8-d6f3-4e4d-b6bd-168ebe694045/7d0551ea84fb66849cccfb0d2c5940f8a0c985a6af409af5d2543f2a739c0812"
+                <video controls width="640" height="360" autoplay muted>
+                    <source src="https://link.storjshare.io/raw/jubhum54rnvinzo4gdzwv5vkknhq/myvideo/4961269844640.mp4"
                         type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-
 
                 <div class="tags">
                     <a href="">#Entreprenuers</a> <a href="">#billionaires</a> <a href="">#RatanTata</a> <a
