update api and mapping link from Storj

--- a/public/admin/upload.html
+++ b/public/admin/upload.html
@@ -21,6 +21,7 @@
     function setTitle() {
       const fileInput = document.getElementById('file');
       const titleInput = document.getElementById('title');
+      const mapid = "";
       
       // Set the title field to the name of the file selected
       titleInput.value = fileInput.files[0].name;
