--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Youtube Clone</title>
+    <title>Xtube</title>
 </head>
 
 <body>
     <nav class="flex-div">
         <div class="nav-left flex-div">
             <img src="./assets/images/menu.png" class="menu-icon" alt="" />
-            <img src="./assets/images/logo.png" class="logo" alt="" />
+            <img src="./assets/images/logo_new.png" class="logo" alt=""/>
         </div>
         <div class="nav-middle flex-div">
             <div class="search-box flex-div">
@@ -33,7 +33,7 @@
     <!-- Side Bar -->
     <div class="sidebar">
         <div class="shortcut-links">
-            <a href="#"><img src="./assets/images/home.png" />
+            <a href="/"><img src="./assets/images/home.png" />
                 <p>Home</p>
             </a>
             <a href="#"><img src="./assets/images/explore.png" />
@@ -166,7 +166,7 @@
             background: #eee;
             border: 1px solid #ccc;
             z-index: 9999;
-            padding: 10px;
+            padding: 0;
         }
 
         /* แถบโฆษณาด้านขวา */
@@ -179,7 +179,7 @@
             background: #eee;
             border: 1px solid #ccc;
             z-index: 9999;
-            padding: 10px;
+            padding: 0;
         }
 
         /* ปุ่มปิดโฆษณา */
